# cpp-protobuf-example

./: .gitignore
cpp/: README.md  websocket_server.cpp
cpp/proto/: news.pb.cc  news.pb.h
cpp/socket/: CMakeLists.txt  continious_send_server.cpp  server.cpp
cpp/test/: main.cpp
node/: index.js  message.proto  package.json  websocket.js
node/proto/: news.proto
node/websocket/: client.js  server.js
web/: index.html  loop_send.html  single.html
